--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,31 @@
+/* Global styles */
+html,
+body {
+  padding: 0;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  color: #555;
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+body {
+  max-width: 50em;
+  padding: 1em 1em;
+  margin: 0 auto;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+/* App specific styles */
 .App {
   text-align: center;
 }
@@ -20,7 +48,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 5;
+  margin: 5px 0;
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -36,15 +64,6 @@
   to {
     transform: rotate(360deg);
   }
-}
-
-body {
-  color: #555;
-  font-size: 25px;
-  line-height: 1.5;
-  margin: 0 auto;
-  max-width: 50em;
-  padding: 1em 1em;
 }
 
 .stats-table {
